[package]
name = "defile-system"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"]}
bytes = "1"
file-format = "0.23.0"
thiserror = "1.0.50"
tokio-util = {version = "0.7.10", features = ["codec"]}
tokio-stream = "0.1.14"
futures = "0.3.29"
crypto = {version = "0.5.1", features = ["digest", "sha2"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0"

[lib]
name = "defile_system"
path = "src/lib.rs"